Fix overlapping sections and refactor code for about section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ body {
   font-family: var(--font-body);
   /* push body content underneath fixed nav */
   /* margin-top: 71px; */
+  background-color: #f5f5f5;
 }
 
 h1,
@@ -22,6 +23,37 @@ h4 {
   font-family: var(--font-heading);
 }
 
+.section-title {
+  /* color: */
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 2rem 0;
+}
+
+.section-flavour-text {
+  /* color: */
+  background-color: white;
+  box-shadow: 0 1px 8px 1px rgba(164, 154, 135,0.2);
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  padding: 4rem 1.5rem;
+  text-align: right;
+}
+
+.section-description {
+  /* color: */
+  font-size: 0.95rem;
+  line-height: 1.5rem;
+  padding: 1rem 1.5rem;
+}
+
+.section-description p {
+  margin-bottom: 1.25rem;
+}
+
+/* Span classes */
 .bold {
   font-weight: 600;
 }
@@ -32,7 +64,8 @@ h4 {
 
 /* Navbar */
 #navbar {
-  background-color: rgba(245, 245, 245, 0.8);
+  background-color: white;
+  opacity: 0.8;
   min-height: 71px;
 }
 
@@ -45,16 +78,16 @@ h4 {
 
 #logo-text h1 {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 400;
   letter-spacing: 1px;
   margin: 0;
 }
 
 #logo-text p {
-  font-family: var(--font-heading);
-  font-size: 0.75rem;
+  font-size: 0.9rem;
   font-weight: 300;
+  letter-spacing: 1px;
   margin: 0;
 }
 
@@ -80,7 +113,7 @@ h4 {
 
 #header {
    height: 100dvh;
-   overflow: hidden;
+   margin-bottom: 2rem;
 }
 
 .header-section {
@@ -123,53 +156,13 @@ h4 {
 
 /* About section */
 
-.test-col {
-  height: 100vh;
-  /* border: 2px solid lime; */
+/* visual aid only */
+/* .test-col {
+  border: 2px solid lime;
 }
-
-.about-top {
-  height: 50vh;
-  border: 2px solid blue;
-}
-
-.about-bot {
-  height: 50vh;
-  border: 2px solid blue;
-}
-
 .col-8, .col-12 {
    border: 2px solid red;
-}
-
-#about h2 {
-  color: black;  
-  margin-top: 5%;
-
-  font-weight: 400;
-  font-size: 1.5rem;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-/* move this to general styles, as re-using font styling */
-.section-header {
-  font-size: 2.5rem;
-  letter-spacing: 1px;
-  text-align: end;
-  padding-bottom: 10%;
-}
-
-.about-description {
-  padding-bottom: 3%;
-}
-
-.about-description p {
-  padding: 0 0 8px 0;
-  margin: 0;
-}
-
-
+} */
 
 
 
@@ -184,6 +177,7 @@ h4 {
   }
   #logo-text p {
     font-size: 1.25rem;
+    margin-top: -5px
   }
 
   #navbar .logo {
@@ -198,11 +192,28 @@ h4 {
   .header-section img {
     object-position: cover cover;
   }
+
+  /* About section */
+
+  #about {
+    height: 100vh;
+    border: 2px solid lime;
+  }
+
+  #about .section-flavour-text {
+    padding: 5rem 2rem;
+    margin: 5rem 0;
+  }
+
+  #about .section-description p {
+    margin-bottom: 2rem;
+  }
 }
 
 /* Large screens (small laptops, 992px and up*/
 @media screen and (min-width: 992px) {
   /* Header section */
+
   /* scroll indicator to show on larger screens only when header section is hovered */
   .scroll-arrow {
     color: white;
@@ -212,4 +223,10 @@ h4 {
   .header-section:hover .scroll-arrow {
     animation: arrow-scroller 2s ease-in-out backwards infinite;
   }
+
+  /* About section */
+  #about .section-description {
+    align-self: end;
+  }
+
 }
